# api-document.yaml
@@ -4,7 +4,6 @@ info:
   version: "2.0.0"
 servers:
   - url: "http://localhost:8080"
-    description: "ローカル開発環境"
 paths:
   /users:
     get:
@@ -14,14 +13,22 @@ paths:
       responses:
         "200":
           description: "ユーザーリストの取得に成功"
-  paths:
+  /user:
+    get:
+      tags:
+        - user
+      summary: "特定のユーザー情報を取得"
+      responses:
+        "200":
+          description: "ユーザー情報の取得に成功"
+      security:
+        - tokenAuth: []
   /user/create:
     post:
       tags:
         - user
       summary: ユーザ情報作成API
-      description:
-        ユーザ情報を作成します。ユーザの名前情報をリクエストで受け取り、ユーザIDと認証用のトークンを生成しデータベースへ保存します。tokenは以降の他のAPIコール時にヘッダに設定をします。
+      description: ユーザ情報を作成します。ユーザの名前情報をリクエストで受け取り、ユーザIDと認証用のトークンを生成しデータベースへ保存します。tokenは以降の他のAPIコール時にヘッダに設定をします。
       requestBody:
         description: Request Body
         content:
@@ -51,22 +58,46 @@ paths:
                   token:
                     type: string
   /user/update:
-    post:
+    put:
+      summary: ユーザー情報の更新
       tags:
         - user
-      summary: ユーザ情報更新API
-      description: |
-        ユーザ情報の更新をします。
-        初期実装では名前の更新を行います。
-      security:
-        - authToken: []
       requestBody:
-        description: Request Body
+        required: true
         content:
           application/json:
-        required: true
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+                - name
+                - email
+                - password
       responses:
-        200:
-          description: A successful response.
-          content: {}
-      
+        "200":
+          description: ユーザー情報が正常に更新されました
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "400":
+          description: 不正なリクエスト
+        "401":
+          description: 認証に失敗しました
+      security:
+        - tokenAuth: []
+components:
+  securitySchemes:
+    tokenAuth:
+      type: apiKey
+      in: header
+      name: x-token
